overflow and grid fix

--- a/src/app/@shared/card-vendor/card-vendor.component.scss
+++ b/src/app/@shared/card-vendor/card-vendor.component.scss
@@ -41,14 +41,14 @@
         display: grid;
         padding: 0;
         height: 105px;
-        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
     }
     &__images-sectionMD {
         border-top: 0;
         display: grid;
         padding: 0;
-        height: 165px;
-        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        height: 175px;
+        grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
     }
 
     &__small-imageContainer {
